# razermon

./: .gitignore  .gitmodules  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: clippy.yml  commitlint.yml  release-please.yml
examples/: battery.rs  cli.rs
razer_driver_rs/: CHANGELOG.md  README.md
razer_driver_rs/src/: razer_device.rs  razer_keyboard.rs  razer_report.rs
scripts/: build.sh  bundle-dylib.sh
src/: App.tsx  lib.rs  main.tsx  razer_device.rs  razer_keyboard.rs  razer_mouse.rs  razer_report.rs  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: battery.rs  database.rs  human_display.rs  main.rs  settings.rs
src/pages/: Home.tsx
