[package]
name = "razer_driver_rs"
description = "Implementation of razer device USB commands"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "LGPL-3.0-only"
keywords = ["razer", "hid"]
categories = ["hardware-support"]
repository = "https://github.com/EchelonFour/razer_driver_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.23", features = ["derive"] }
bytes = "1.1.0"
associated = { version = "0.2.0", features = ["derive"] }
hidapi = "1.3.2"
thiserror = "1.0.30"